Fixed docker not building

--- a/srcs/database/Dockerfile
+++ b/srcs/database/Dockerfile
@@ -8,11 +8,11 @@ ENV WORDPRESS_USER:=wpuser
 EXPOSE 3306
 
 VOLUME ["var/lib/mysql"]
-COPY ["setup.sh", "/var/lib/mysql"]
+COPY ["setup.sh", "/var/lib/mysql/"]
 
 RUN \
     apk add --no-cache mariadb mariadb-client && \
     chmod +x /var/lib/mysql/setup.sh
 
-ENTRYPOINT ["setup.sh"]
+ENTRYPOINT ["/var/lib/mysql/setup.sh"]
 CMD ["mariadb", "--user=mysql", "--datadir=/var/lib/mysql", "--bind-address=0.0.0.0"]
