--- a/srcs/database/Dockerfile
+++ b/srcs/database/Dockerfile
@@ -2,13 +2,20 @@ FROM alpine:3.20.0
 
 EXPOSE 3306
 
-VOLUME ["var/lib/mysql"]
-COPY ["setup.sh", "/var/lib/mysql/"]
+COPY "setup_db.sh" "/bin/"
+
+RUN mkdir -p /run/mysqld
 
 RUN \
     apk add --no-cache mariadb mariadb-client && \
-    chown -R mysql:mysql /var/lib/mysql && \
-    chmod +x /var/lib/mysql/setup.sh
+    chown -R mysql:mysql /run/mysqld /var/lib/mysql && \
+    mariadb-install-db --user=mysql --datadir=/var/lib/mysql && \
+    chmod +x /bin/setup_db.sh
 
-ENTRYPOINT ["/var/lib/mysql/setup.sh"]
-CMD ["mariadbd", "--user=mysql", "--datadir=/var/lib/mysql", "--bind-address=0.0.0.0", "--socket=/run/mysqld/mysqld.sock"]
+COPY "conf/mariadb-server.cnf" "/etc/my.cnf.d/"
+    
+ENTRYPOINT ["/bin/setup_db.sh"]
+CMD ["mariadb"]
+
+# ENTRYPOINT ["sleep"]
+# CMD ["infinity"]
