--- a/srcs/nginx/conf/server.conf
+++ b/srcs/nginx/conf/server.conf
@@ -10,10 +10,11 @@ server {
     root /var/www/html;
     index index.php index.html index.htm;
 
-    location ~\.php$ {
-        fastcgi_pass wordpress:9000;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    location ~ \.php$ {
+        include fastcgi_params;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_pass wordpress:9000;
 		fastcgi_index index.php;
+		fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
     }
 }
