--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -63,8 +63,10 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      mariadb :
+      mariadb:
          condition: service_healthy
+    networks:
+      - inception
 
 networks:
   inception:
