--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -15,9 +15,15 @@ RUN mkdir -p /etc/nginx/ssl/ \
 	&& openssl req \
 		-x509 \
 		-nodes \
-		-out /etc/nginx/ssl/inception.crt \
-		-keyout /etc/nginx/ssl/inception.key \
-		-subj "/C=FR/ST=NA/L=Angouleme/O=42/OU=42/CN=csenelle.42.fr/UID=csenelle"
+		-out /etc/nginx/ssl/wordpress.crt \
+		-keyout /etc/nginx/ssl/wordpress.key \
+		-subj "/C=FR/ST=NA/L=Angouleme/O=42/OU=42/CN=csenelle.42.fr/UID=csenelle" \
+	&& openssl req \
+		-x509 \
+		-nodes \
+		-out /etc/nginx/ssl/adminer.crt \
+		-keyout /etc/nginx/ssl/adminer.key \
+		-subj "/C=FR/ST=NA/L=Angouleme/O=42/OU=42/CN=csenelle.adminer.fr/UID=csenelle_adminer"
 
 EXPOSE 443
 
