--- a/srcs/nginx/conf/adminer.conf
+++ b/srcs/nginx/conf/adminer.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name adminer.42.fr;
+    server_name csenelle.adminer.fr;
 
     ssl_certificate     /etc/nginx/ssl/adminer.crt;
 	ssl_certificate_key /etc/nginx/ssl/adminer.key;
