adding beggining of ftp client

--- a/srcs/bonus/adminer/Dockerfile
+++ b/srcs/bonus/adminer/Dockerfile
@@ -10,12 +10,12 @@ RUN apk update \
     php84 \
     php84-mbstring
 
-RUN mkdir -p /var/www/html/adminer
+RUN mkdir -p /var/www/html
 
-WORKDIR /var/www/html/adminer
+WORKDIR /var/www/html
 
 RUN wget -O index.php https://github.com/vrana/adminer/releases/download/v5.4.1/adminer-5.4.1-en.php
 
 EXPOSE 8080
 
-CMD ["php84", "-S", "0.0.0.0:8080", "-t", "/var/www", "/var/www/adminer.php"]
+CMD ["php84", "-S", "0.0.0.0:8080", "-t", "/var/www/html"]
