--- a/srcs/nginx/conf/adminer.conf
+++ b/srcs/nginx/conf/adminer.conf
@@ -10,11 +10,11 @@ server {
     root /var/www/adminer;
     index index.php;
 
-    location ~ \.php$ {
-        include fastcgi_params;
-		fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_pass adminer:8080;
-		fastcgi_index index.php;
-		fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+    location / {
+        proxy_pass http://adminer:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
