--- a/srcs/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/bonus/ftp/conf/vsftpd.conf
@@ -1,18 +1,25 @@
 anonymous_enable=NO
 dirmessage_enable=YES
 local_enable=YES
-#
+
 # Activate logging of uploads/downloads.
 xferlog_enable=YES
 
 ftpd_banner="Welcome to csenelle's Wordpress FTP service."
 
-chroot_local_user=YES
-allow_writeable_chroot=YES
+chroot_local_user=NO
+allow_writeable_chroot=NO
 user_sub_token=$USER
 local_root=/var/www/html
 
+pasv_enable=Yes
+pasv_max_port=21210
+pasv_min_port=21220
 
 listen=YES
 listen_port=21
 listen_address=0.0.0.0
+
+userlist_enable=YES
+userlist_file=/etc/vsftpd.userlist
+userlist_deny=NO
