Fixed ftp restart bug in conf

--- a/srcs/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/bonus/ftp/conf/vsftpd.conf
@@ -1,14 +1,16 @@
 anonymous_enable=NO
 dirmessage_enable=YES
 local_enable=YES
+seccomp_sandbox=NO
+write_enable=YES
 
 # Activate logging of uploads/downloads.
 xferlog_enable=YES
 
 ftpd_banner="Welcome to csenelle's Wordpress FTP service."
 
-chroot_local_user=NO
-allow_writeable_chroot=NO
+chroot_local_user=YES
+allow_writeable_chroot=YES
 user_sub_token=$USER
 local_root=/var/www/html
 
