Fixed adress bug missing / at the end address and removed uunecessary port  exposision in docker compsoe

--- a/srcs/bonus/static_page/conf/static_page.conf
+++ b/srcs/bonus/static_page/conf/static_page.conf
@@ -1,12 +1,11 @@
 server {
     listen 1818;
-    server_name csenelle.42.fr;
+    server_name _;
 
     root /var/www/html;
-    index.html;
+    index index.html;
 
     location / {
-        index index.html;
         try_files $uri $uri/ =404;
     }
 }
