--- a/srcs/nginx/conf/server.conf
+++ b/srcs/nginx/conf/server.conf
@@ -11,7 +11,7 @@ server {
     index index.php index.html index.htm;
 
     location /welcome {
-        proxy_pass http://static_page:1818;
+        proxy_pass http://static_page:1818/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
